Remove apache commons dependencies
And update to not use deprecated API.